--- a/style.css
+++ b/style.css
@@ -49,9 +49,9 @@ h5 {
 }
 
 #regionselect {
-    width: 100%;
+    /* width: 100%; */
     font-size: 0.8rem;
-    height: 40px;
+    /* height: 40px; */
 }
 
 .blockmaptop {
